--- a/app.json
+++ b/app.json
@@ -26,6 +26,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "extra": {
+      "googleClientId": "631948568273-g5q581s1kbt0c8gibp7v44jk9bvmmrsm.apps.googleusercontent.com"
+    },
     "plugins": [
       "expo-router",
       [
