--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "firebase": "^12.5.0",
+  "expo-auth-session": "^4.0.1",
+  "expo-crypto": "^12.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "react": "19.1.0",
